add station picture"

--- a/myapp/src/app/app.component.html
+++ b/myapp/src/app/app.component.html
@@ -43,25 +43,21 @@
           <!--[style.display]="monolog_pane_showorhide('bio')">-->
       <span id="content_text"
             [@menu_state_text_content]="menu_state"
-            [style.display]="monolog_pane_showorhide('bio')">
-      I started hacking at 12 years old when AOL was giving out free internet access on a disc.
+            [style.display]="monolog_pane_showorhide('bio')">I started hacking at 12 years old when AOL was giving out free internet access on a disc.
       Today I focus on front-end development- building software solutions for peoples' problems.
     </span>
       <span id="startup" [@menu_state_text_content]="menu_state"
-            [style.display]="monolog_pane_showorhide('startup')">
-      I love startup because it allows radically ideas to take shape.
+            [style.display]="monolog_pane_showorhide('startup')">I love startup because it allows radically ideas to take shape.
          Over the last years,
         I've had the opportunity to work at 3 different startups. Read more about my experience below:
       </span>
       <span id="software"   [@menu_state_text_content]="menu_state"
-            [style.display]="monolog_pane_showorhide('software')">
-        As a frontend developer, my go-to tools are TypeScript, Angular2 and Ionic2.
+            [style.display]="monolog_pane_showorhide('software')">As a frontend developer, my go-to tools are TypeScript, Angular2 and Ionic2.
         I like to focus on the customers to find their root of problems through various
         quantitative and qualitative techniques.
       </span>
       <span id="people"   [@menu_state_text_content]="menu_state"
-            [style.display]="monolog_pane_showorhide('people')">
-       People are the heart of my work.
+            [style.display]="monolog_pane_showorhide('people')">People are the heart of my work.
         My interest to better understand human behaviors came out of my passion to design awesome product/service.
       </span>
       </p>
