--- a/myapp/src/styles.scss
+++ b/myapp/src/styles.scss
@@ -1,8 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'app/palette.scss';
+@import url('https://fonts.googleapis.com/css?family=Raleway:300');
 
 *{
-  font-family: Arial, Helvetica, sans-serif;
+  //font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Raleway', sans-serif;
   margin: 0;
   padding: 0;
   border: 0;
