--- a/myapp/src/styles.css
+++ b/myapp/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css?family=Raleway:300");
 * {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Raleway', sans-serif;
   margin: 0;
   padding: 0;
   border: 0;
